overflow fix

--- a/milestone4/styles.css
+++ b/milestone4/styles.css
@@ -65,7 +65,7 @@ legend h2 {
 
 .personal-info {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
   gap: 20px;
 }
 
