--- a/milestone5/styles.css
+++ b/milestone5/styles.css
@@ -65,11 +65,8 @@ legend h2 {
 
 .personal-info {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
   gap: 20px;
-  @media (max-width: 450px) {
-    overflow: hidden;
-  }
 }
 
 
